tests/diagnostics/statements/bindings/non_optional_nil_assignment/expect.txt
# exit: 1
input/lib.coppice:2:22: error: type mismatch: expected int64, got nil
      _value: int64 := nil
                       ^
